# lithe

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  plugin-api.md  roadmap.md  storage.md  tauri-build.md  vision.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/renderer/src/: main.ts  styles.css
src/renderer/src/app/: clock.ts  draftStorage.ts  shell.ts  spaceStorage.ts
src/renderer/src/editor/: createEditor.ts  highlighting.ts  inputHandlers.ts  keymaps.ts
src/renderer/src/markdown/: decorations.ts  fencedCode.ts  inlinePreview.ts  livePreview.ts  selection.ts  types.ts  widgets.ts
