[package]
name = "lithe"
version = "0.1.0"
description = "A light, local-first Markdown text editor."
authors = ["Seungyong Lee"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lithe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
